--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/api"
+
             ],
             "styles": [
               "src/styles.scss"
